--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-router-dom": "7.9.4"
+    "react": "~19.2.0",
+    "react-dom": "~19.2.0",
+    "react-router-dom": "~7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
